  * Bug fix: "[Amended] copyright should include notice if a package is
    not a part of Debian distribution", thanks to Taketoshi Sano
                                                             (Closes: #65577).
  * Bug fix: "scripts as configuration files: should vs. must", thanks to Frank
    Küster                                                   (Closes: #403391).
  * Bug fix: "Examples of dpkg frontends should mention apt now", thanks
    to Josh Triplett                                         (Closes: #455602).
  * Bug fix: "Minor typos and wording suggestions", thanks to Michael
    Tautschnig                                               (Closes: #422552).
  * Bug fix: "substvar reference moved from dpkg-source(1) to
    deb-substvars(5)", thanks to Ian Beckwith                (Closes: #475731).
  * Add an md5sums control file.
  * Add Vcs-Browser and Vcs-Git control fields.
  * Remove build system support for FHS 2.1 and FSSTND, mostly commented out.
  * Remove the FSSTND license from debian/copyright; no FSSTND files are
    currently part of policy.
  * Update FHS copyright dates in debian/copyright.
  * Standardize the spacing around headings in upgrading-checklist.html.

 --

debian-policy (3.7.3.0) unstable; urgency=low

  * Bug fix: "FTBFS if built twice in a row"                 (Closes: #424212).
  * Bug fix: "[PROPOSAL] Document ~ behavior in version numbers", thanks
    to Nicolas François and Marc Brockschmidt                (Closes: #382612).
  * Bug fix: "Please add 'local' to list of supra-POSIX features that
    /bin/sh can be expected to offer". Also add test -a/-o binary logical
    operators and change references from POSIX to SUSv3      (Closes: #294962).
  * Bug fix: "[Proposal] new Debian menu structure", thanks to Bill
    Allombert                                                (Closes: #361418).
  * Bug fix: "typo: "must not be not world-writable"", thanks to Sam