@@ -139,8 +139,8 @@
 	So, what do we need to store in a variable template? Of course we
 	need a name to identify the template. Template names are made up of
 	components separated by the character `/' (slash).
-	Each component is limited to alphanumerics and `+' `-' `.'
-	(plus, minus, full stop).
+	Each component is limited to alphanumerics and `+' `-' `.' `_'
+	(plus, minus, full stop, underscore).
       </para>
       <para>
         A type is also needed so data can be verified. Here is a table
