@@ -99,6 +99,7 @@ picking your way through this list.
      * Packages in contrib and non-free should state in the copyright file
        that the package is not part of Debian GNU/Linux and briefly
        explain why.                                              [12.5]
+     * Underscore (_) is allowed in debconf template names.      [debconf]
 
 3.7.3.0                        Dec 2007
 
